2003-01-20  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* make/lilypond.redhat.spec.in: set docdir to %{_docdir}/lilypond/
	(without version number.)

2003-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/chord-name.scm: Amy's chord patch.

2002-12-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/lilypond.hint (requires): Add cygwin, fileutils, findutils.

2003-01-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/paper19.ly: Add warning about paper19 not working.

	* lily/source-file.cc (get_line): backport off by two fix from
	development release.

2002-11-21  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* lily/volta-engraver.cc (process_acknowledged_grobs): 
	Allow for text markup in repeatCommands. 

2002-11-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/topdocs/INSTALL.texi (Top): PlanetCCRMA link.

2002-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: Add 1.6.6 release marker.  See below.

	* stepmake/stepmake/po-targets.make: Remove --c++ option.

	* scripts/midi2ly.py: Fix global syntax warnings.

	* GNUmakefile.in: Generate builddir locale tree too.

	* scripts/ly2dvi.py:
	* scripts/midi2ly.py: 
	* scripts/mup2ly.py: 
	* scripts/update-lily.py:
	* lily/main.cc (setup_paths): Fix for locales setup.

2002-10-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/windows/installing.texi: Soften wording about
	necessity of becoming Administrator.  tommie@iae.nl reports this
	does not seem to be necessary for his flavour of Windows 2000.
	Explicitly discourage text mode mounts.

2002-10-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/rest.cc (after_line_breaking): backport dot position fix.

	* lily/rest-collision.cc (do_shift): also remove dots for suicided
	rests. Thanks to Klaus Zimmermann for finding this bug.

2002-10-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/topdocs/INSTALL.texi: Correction for broken /bin/sh.

2002-10-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/music-glossary.tely: fix links.
