@@ -56,7 +56,9 @@ def tfm_checksum (fn):
 		shift = shift - 8
 
 	return cs
-  
+
+## ugh.  What's font_family supposed to be?  It's not an afm thing.
+font_family = 'feta'
 def parse_logfile (fn):
 	(autolines, deps) = read_log_file (fn)
 	charmetrics = []
@@ -80,11 +82,26 @@ def parse_logfile (fn):
 				}
 			charmetrics.append (m)
 		elif tags[0] == 'font':
-			global_info['FontName'] = string.join (tags[1:])
-			global_info['FontFamily']=tags[1]
+			global font_family
+			font_family = (tags[3])
+			# To omit 'GNU' (foundry) from font name proper:
+			# name = tags[2:]
+			#urg
+			if 0: #testing
+				tags.append ('Regular')
+			name = tags[1:]
+			global_info['FontName'] = string.join (name,'-')
+			global_info['FullName'] = string.join (name,' ')
+			global_info['FamilyName'] = string.join (name[1:-1],
+								 '-')
+			if 1:
+				global_info['Weight'] = tags[4]
+			else: #testing
+				global_info['Weight'] = tags[-1]
 			global_info['FontBBox'] = '0 0 1000 1000'
 			global_info['Ascender'] = '0'
 			global_info['Descender'] = '0'
+			global_info['EncodingScheme'] = 'FontSpecific'
 	
 	return (global_info, charmetrics, deps)
 
@@ -102,23 +119,24 @@ def write_afm_char_metric(file, charmetric):
 	
 	
 	file.write ('C %d ; WX %d ; N  %s ;  B %d %d %d %d ;\n'% tup)
-	
+
+def write_afm_header (file):
+	file.write ("StartFontMetrics 2.0\n")
+	file.write ("Comment Automatically generated by mf-to-table.py\n")
+
 def write_afm_metric (file, global_info, charmetrics):
-	file.write (r"""
-StartFontMetrics 2.0
-Comment Automatically generated by mf-to-table.py
-""")
 	for (k,v) in global_info.items():
 		file.write ("%s %s\n" % (k,v))
 	file.write ('StartCharMetrics %d\n' % len(charmetrics ))
 	for m in charmetrics:
 		write_afm_char_metric (file,m)
 	file.write ('EndCharMetrics\n')
-	file.write ('EndFontMetrics %d\n')
+	file.write ('EndFontMetrics\n')
 
 
 def write_tex_defs (file, global_info, charmetrics):
-	nm = global_info['FontFamily']
+	##nm = global_info['FontFamily']
+	nm = font_family
 	for m in charmetrics:
 		file.write (r'''\gdef\%s%s{\char%d}%%%s''' % (nm, m['tex'], m['code'],'\n'))
 	file.write ('\\endinput\n')
@@ -134,7 +152,8 @@ def write_ps_encoding (file, global_info, charmetrics):
 	file.write ('] def\n')
 	
 def write_fontlist (file, global_info, charmetrics):
-	nm = global_info['FontFamily']
+	##nm = global_info['FontFamily']
+	nm = font_family
 	file.write (r"""
 % Lilypond file to list all font symbols and the corresponding names
 % Automatically generated by mf-to-table.py
@@ -232,9 +251,10 @@ for filenm in files:
 	cs = tfm_checksum (re.sub ('.log$', '.tfm', filenm))
 	afm = open (afmfile_nm, 'w')
 
-	afm.write ("TfmCheckSum %u\n" % cs) 
+	write_afm_header (afm)
+	afm.write ("Comment TfmCheckSum %u\n" % cs)
+	write_afm_metric (afm, g, m)
 	
-	write_afm_metric (afm, g,m)
 	write_tex_defs (open (texfile_nm, 'w'), g, m)
 	write_ps_encoding (open (enc_nm, 'w'), g, m)
 	
