@@ -39,11 +39,11 @@ if test = 0:
 	input feta-solfa;
 	
 else:
-	input feta-bolletjes;	
+%	input feta-bolletjes;	
 %	input feta-banier;
 %	input feta-eindelijk;
 %	input feta-klef;
-%	input feta-toevallig;
+	input feta-toevallig;
 %	input feta-schrift;
 %	input feta-haak;
 %	input feta-timesig;
