@@ -171,7 +171,12 @@ def draw_meta_flat(expr xcenter, w, crook_fatness) =
 	save top_stem_thick, bottom_stem_thick, hair, smaller_hole;
 	save center;
 	pair center;
+	save clearing;
 	center = (xcenter, 0);
+
+% the shouldn't reach to the top staff line.
+%% TODO: should take from height.
+	clearing = 1.2 stafflinethickness; 
 
 %
 %  TODO: parameterize  this
@@ -181,12 +186,12 @@ def draw_meta_flat(expr xcenter, w, crook_fatness) =
 	else:
 		smaller_hole = 0.0 stafflinethickness;
 	fi
-	crook_thinness = 1.1 stafflinethickness;
-	top_stem_thick = 2 stafflinethickness;
+	crook_thinness = 1.25 stafflinethickness;
+	top_stem_thick = 2.2 stafflinethickness;
 	bottom_stem_thick = 1.2 stafflinethickness;
 
 
-	z1 = (0, 2 staff_space) + center;
+	z1 = (0, 2 staff_space) + center - (0, stafflinethickness/2 + clearing);
 	z2 = (0, - 1/2 staff_space)+  center;
 
 	penpos1(top_stem_thick, 0);
@@ -251,8 +256,8 @@ enddef;
 % unfortunately, 600dpi is not enough to show the brush of the stem.
 %
 fet_beginchar("Flat", "-1", "flat")
-	set_char_box(1.2 stafflinethickness#, .8 staff_space#, 0.6 staff_space#, 2 staff_space#);
-	draw_meta_flat(0, w, 1/3 staff_space);
+	set_char_box(1.2 stafflinethickness#, .8 staff_space#, 0.6 staff_space#, 1.9 staff_space#);
+	draw_meta_flat(0, w, 0.31 staff_space);
 	fet_endchar;
 
 
@@ -261,10 +266,10 @@ fet_beginchar("Double Flat", "-2", "flatflat")
 	left_wid = .7;
 	right_wid = .8;
 	overlap = .05;
-	set_char_box(1.2 stafflinethickness#, (left_wid + right_wid -overlap) *staff_space#, .6 staff_space#, 2 staff_space#);
+	set_char_box(1.2 stafflinethickness#, (left_wid + right_wid -overlap) *staff_space#, .6 staff_space#, 1.9 staff_space#);
 	draw_meta_flat(0, left_wid*  staff_space, 1/3 staff_space);
 	draw_meta_flat((left_wid - overlap) *staff_space,  
-		right_wid *staff_space, 1/3 staff_space);
+		right_wid *staff_space, 0.33 staff_space);
 	fet_endchar;
 
 fet_beginchar("Double Sharp", "2", "sharpsharp")
